--- a/src/main/resources/templates/addAccountPage.html
+++ b/src/main/resources/templates/addAccountPage.html
@@ -39,10 +39,10 @@
         <form id="newAccountForm" action="#" th:action="@{/add-account}" th:object="${newAccountForm}"
               method="POST">
             <label for="newAccountName">Account Name</label>
-            <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}"/>
+            <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}" required/>
             <label for="newAccountBalance">Starting Balance</label>
             <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
-                   th:field="*{accountBalance}"/>
+                   th:field="*{accountBalance}" required/>
             <button type="submit" class="btn btn-success" form="newAccountForm">Add</button>
     </div>
 </div>
@@ -50,7 +50,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+</script>
 </body>
 
 </html>
