--- a/src/main/resources/templates/addAccountPage.html
+++ b/src/main/resources/templates/addAccountPage.html
@@ -58,7 +58,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous">
-
+</script>
+<script>
     window.onload = function () {
         var messages = document.querySelectorAll('.alert');
         setTimeout(function () {
@@ -68,6 +69,7 @@
         }, 5000); // Change this to the number of milliseconds you want to wait before the messages disappear
     };
 </script>
+
 </body>
 
 </html>
