--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,47 +1,47 @@
 /* This stylesheet will override bootstrap default styling */
 
-/* Style override for the 'danger' buttons (cancel/deletes) */
-.btn-danger {
+/* Style overrides for the main buttons */
+.btn-primary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #aa5e5a;
-    --bs-btn-border-color: #aa5e5a;
+    --bs-btn-bg: #3D405B;
+    --bs-btn-border-color: #3D405B;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #94504c;
-    --bs-btn-hover-border-color: #94504c;
+    --bs-btn-hover-bg: #212231;
+    --bs-btn-hover-border-color: #212231;
     --bs-btn-focus-shadow-rgb: 225,83,97;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #aa5e5a;
-    --bs-btn-active-border-color: #aa5e5a;
+    --bs-btn-active-bg: #3D405B;
+    --bs-btn-active-border-color: #3D405B;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 /* Style overrides for the secondary buttons */
 .btn-secondary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #cea4a1;
-    --bs-btn-border-color: #cea4a1;
+    --bs-btn-bg: #81B29A;
+    --bs-btn-border-color: #81B29A;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #C08B87;
-    --bs-btn-hover-border-color: #C08B87;
+    --bs-btn-hover-bg: #5D987B;
+    --bs-btn-hover-border-color: #5D987B;
     --bs-btn-focus-shadow-rgb: 130, 138, 145;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #cea4a1;
-    --bs-btn-active-border-color: #cea4a1;
+    --bs-btn-active-bg: #81B29A;
+    --bs-btn-active-border-color: #81B29A;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-/* Style overrides for the main buttons */
-.btn-primary {
+/* Style override for the 'danger' buttons (cancel/deletes) */
+.btn-danger {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #9C6F69;
-    --bs-btn-border-color: #9C6F69;
+    --bs-btn-bg: #E07A5F;
+    --bs-btn-border-color: #E07A5F;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #875E5A;
-    --bs-btn-hover-border-color: #875E5A;
+    --bs-btn-hover-bg: #D85531;
+    --bs-btn-hover-border-color: #D85531;
     --bs-btn-focus-shadow-rgb: 49,132,253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #9C6F69;
-    --bs-btn-active-border-color: #9C6F69;
+    --bs-btn-active-bg: #E07A5F;
+    --bs-btn-active-border-color: #E07A5F;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
@@ -53,7 +53,7 @@
     --bs-btn-font-size: 1rem;
     --bs-btn-font-weight: 400;
     --bs-btn-line-height: 1.5;
-    --bs-btn-color: #C08B87;
+    --bs-btn-color: #F2CC8F;
     --bs-btn-bg: transparent;
     --bs-btn-border-width: var(--bs-border-width);
     --bs-btn-border-color: transparent;
@@ -93,29 +93,29 @@
 
 /* Override the 'Add Wallet' Button */
 .btn-outline-success {
-    --bs-btn-color: #875E5A;
+    --bs-btn-color: #E07A5F;
     --bs-btn-border-color: 00FFFFFF;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #875E5A;
-    --bs-btn-hover-border-color: #875E5A;
+    --bs-btn-hover-bg: #E07A5F;
+    --bs-btn-hover-border-color: #E07A5F;
     --bs-btn-focus-shadow-rgb: 25,135,84;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #875E5A;
-    --bs-btn-active-border-color: #875E5A;
+    --bs-btn-active-bg: #E07A5F;
+    --bs-btn-active-border-color: #E07A5F;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 /* Override the table styling to force vertical align */
 tbody, td, tfoot, th, thead, tr {
     vertical-align: middle;
-    border-color: #F1E5E4 !important;
+    border-color: #F4F1DE !important;
 }
 
 /* Override the table background color for the price */
 #table-custom {
-    --bs-table-accent-bg: #F1E5E4;
+    --bs-table-accent-bg: #F4F1DE;
     --bs-table-border-color: transparent;
-    border-color: #F1E5E4 !important;
+    border-color: #F4F1DE !important;
 }
 
 /* Modify the background color */
@@ -133,4 +133,9 @@ https://stackoverflow.com/questions/60680652/how-to-add-a-shadow-under-a-navbar-
 
 .justify-content-between {
     justify-content: center !important;
+}
+
+/* Override the Font Family */
+body {
+    font-family: 'Noto Sans JP', sans-serif;
 }
