--- a/src/main/resources/templates/addAccountPage.html
+++ b/src/main/resources/templates/addAccountPage.html
@@ -38,10 +38,12 @@
     </div>
 </nav>
 <div class="container mt-5">
-        <div th:if="${messages}">
-            <div th:each="message : ${messages}" class="alert alert-primary" th:text="${message}">
-            </div>
+    <div th:if="${messages}">
+        <div th:each="message : ${messages}" class="alert alert-warning alert-dismissible fade show" role="alert">
+            <p th:text="${message}"></p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+    </div>
     <div class="card mx-auto my-auto p-5">
         <form id="newAccountForm" action="#" th:action="@{/add-account}" th:object="${newAccountForm}"
               method="POST">
@@ -60,14 +62,14 @@
         crossorigin="anonymous">
 </script>
 <script>
-    window.onload = function () {
-        var messages = document.querySelectorAll('.alert');
-        setTimeout(function () {
-            messages.forEach(function (message) {
-                message.style.display = 'none';
-            });
-        }, 5000); // Change this to the number of milliseconds you want to wait before the messages disappear
-    };
+    // window.onload = function () {
+    //     var messages = document.querySelectorAll('.alert');
+    //     setTimeout(function () {
+    //         messages.forEach(function (message) {
+    //             message.style.display = 'none';
+    //         });
+    //     }, 5000); // Change this to the number of milliseconds you want to wait before the messages disappear
+    // };
 </script>
 
 </body>
