--- a/src/main/resources/templates/addAccountPage.html
+++ b/src/main/resources/templates/addAccountPage.html
@@ -40,7 +40,7 @@
 <div class="container mt-5">
     <div th:if="${messages}">
         <div th:each="message : ${messages}" class="alert alert-warning alert-dismissible fade show" role="alert">
-            <p th:text="${message}"></p>
+            <span th:text="${message}"></span>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
