--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -11,7 +11,7 @@
 <body>
 <div class="login">
     <div class="title">
-        <h1>Welcome to BankApp!</h1>
+        <h1>Welcome to Budgetix!</h1>
     </div>
     <form action="#" class="error" th:action="@{/login}" th:object="${loginForm}" method="post">
         <!-- Tells the user if their login attempt failed -->
